test/field/get_on_class.lox
struct Foo {}
Foo.bar // error: only instances have field
